--- a/RxUISimpleTimer.Mac/RxUISimpleTimer.Mac.csproj
+++ b/RxUISimpleTimer.Mac/RxUISimpleTimer.Mac.csproj
@@ -110,6 +110,7 @@
     </Compile>
     <Compile Include="Models\NativeDialog.cs" />
     <Compile Include="Models\LapTimesDataSource.cs" />
+    <Compile Include="Converters\CellStateConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Main.storyboard" />
@@ -118,6 +119,7 @@
   <ItemGroup>
     <Folder Include="ViewControllers\" />
     <Folder Include="Models\" />
+    <Folder Include="Converters\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RxUISimpleTimer.Core\RxUISimpleTimer.Core.csproj">
